navigation links FIX

--- a/pak/2.1-Language-Elements.md
+++ b/pak/2.1-Language-Elements.md
@@ -22,7 +22,7 @@ Components
 
 Are the building blocks of Parts and Kits.
 
-![](../../images/PAK-BasicComponent.jpg)
+![](img/PAK-BasicComponent.jpg)
 
 A **component** has one or more **inputs** and one or more **outputs**.
 
@@ -229,4 +229,4 @@ countries: [
 
 
 
-> *Próximo*: [2.2 Kernel Components](../2.2-kernel-components)
+> *Próximo*: [2.2 Kernel Components](2.2-Kernel-Components.md)
