--- a/pak/2.2-Kernel-Components.md
+++ b/pak/2.2-Kernel-Components.md
@@ -221,4 +221,4 @@ Finds the  the numeric value of input (a) times input (b).
 
 ### Examples
 
->   *Próximo*: [2.2.2 String Components](../2.2.2-string-components)
+>   *Próximo*: [2.2.2 String Components](2.2.2-String-Components.md)
