--- a/pak/2.2.2-String-Components.md
+++ b/pak/2.2.2-String-Components.md
@@ -164,4 +164,4 @@ Special Cases
 
  
 
->   *Próximo*: [2.2.3 Compound Strings](../2.2.3-compound-components)
+>   *Próximo*: [2.2.3 Compound Strings](2.2.3-Compound-Components.md)
