--- a/pak/2.2.4-User-Interface-Components.md
+++ b/pak/2.2.4-User-Interface-Components.md
@@ -43,4 +43,4 @@ Output [data] is ready only after the ENTER, ESC or LOST_FOCUS events are genera
 
  
 
->   *Próximo*: [2.2.5 Control Flow](../2.2.5-control-flow-components)
+>   *Próximo*: [2.2.5 Control Flow](2.2.5-Control-Flow-Components.md)
