--- a/pak/2.2.3-Compound-Components.md
+++ b/pak/2.2.3-Compound-Components.md
@@ -40,4 +40,4 @@ must begin.
 
  
 
->   *Próximo*: [2.2.4 User Interface Components](../2.2.4-user-interface-components)
+>   *Próximo*: [2.2.4 User Interface Components](2.2.4-User-interface-Components.md)
