link to Composition

--- a/pak/2.2.5-Control-Flow-Components.md
+++ b/pak/2.2.5-Control-Flow-Components.md
@@ -128,4 +128,4 @@ its limit input (b).
 
  
 
->   *Próximo*: [2.3 Composition](../2.3-composition)
+>   *Próximo*: [2.3 Composition](2.3-Composition.md)
