--- a/pak/2.1-Language-Elements.md
+++ b/pak/2.1-Language-Elements.md
@@ -6,9 +6,9 @@ title: PAK - Language Elements
 
 - Components
 - Simple Values
- - Numeric Values
+- Numeric Values
 - Compound Values
-  - Compound Metapak
+- Compound Metapak
 
 2.1 Language Elements
 =====================
@@ -229,4 +229,4 @@ countries: [
 
 
 
-> *Próximo*: [2.2 Kernel Components](2.2-Kernel-Components.md)
+> *Next*: [2.2 Kernel Components](2.2-Kernel-Components.md)
