--- a/pak/2.2.2-String-Components.md
+++ b/pak/2.2.2-String-Components.md
@@ -163,5 +163,5 @@ Special Cases
 | "Banana" | ""    | 7   | 0     |
 
  
-
->   *Próximo*: [2.2.3 Compound Strings](2.2.3-Compound-Components.md)
+------
+>   *Next*: [2.2.3 Compound Strings](2.2.3-Compound-Components.md)
