--- a/pak/2.2.3-Compound-Components.md
+++ b/pak/2.2.3-Compound-Components.md
@@ -9,9 +9,11 @@ The fundamental components used to construct other PAK parts.
 2.2.3 Compound Components
 ======================
 
-Provide useful operations for the manipulation of compound strings, such as.
+Provide useful operations for the manipulation of compound strings, also known as **SoS** (_String of Strings_), such as:
 
- 
+- **pack** its several inputs into a SoS.
+
+
 
 TODO
 ----
@@ -39,5 +41,5 @@ must begin.
 | "1" | "02H" | "3"   |
 
  
-
->   *Próximo*: [2.2.4 User Interface Components](2.2.4-User-Interface-Components.md)
+------
+>   *Next*: [2.2.4 User Interface Components](2.2.4-User-Interface-Components.md)
