--- a/pak/2.2.5-Control-Flow-Components.md
+++ b/pak/2.2.5-Control-Flow-Components.md
@@ -127,5 +127,5 @@ its limit input (b).
 | banana | n      | 4     | 0      | same as above              |
 
  
-
->   *Próximo*: [2.3 Composition](2.3-Composition.md)
+------
+>   *Next*: [2.3 Composition](2.3-Composition.md)
