--- a/pak/2.3-Composition.md
+++ b/pak/2.3-Composition.md
@@ -19,4 +19,4 @@ Provide the manipulation of strings.
 
 
 
-> *Próximo*: [2.3 Composition](2.3-Composition.md)
+> *Next*: [2.3 Composition](2.3-Composition.md)
