--- a/pak/2.2.4-User-Interface-Components.md
+++ b/pak/2.2.4-User-Interface-Components.md
@@ -42,5 +42,5 @@ Output [data] is ready only after the ENTER, ESC or LOST_FOCUS events are genera
 |       | {ENTER}              | ""             |
 
  
-
->   *Próximo*: [2.2.5 Control Flow](2.2.5-Control-Flow-Components.md)
+------
+>   *Next*: [2.2.5 Control Flow](2.2.5-Control-Flow-Components.md)
