Kernel improved, Boolean added

--- a/pak/2.2-Kernel-Components.md
+++ b/pak/2.2-Kernel-Components.md
@@ -6,36 +6,41 @@ title: 2.2 PAK Kernel Components
 
 The fundamental components used to construct other PAK parts.
 
-2.2.1 Arithmetic Components
+[Arithmetic Components](2.2.1-Arithmetic-Components.md)
 ===========================
 
 Provide the mathematical operations upon numerical values, such as:
 
--   **absolute** to compute the positive value of a number
+-   `abs` to compute the absolute (positive) value of a number
 
--   **add**, **subtract**, **multiply**, **divide** to compute the basic
-    arithmetic operations
+-   **add**, **sub**, **mul**, **div** to compute the basic
+    arithmetic operations (addition, subtraction, multiplication and division)
 
--   **integer** to compute the integer part of a number
+-   **int** to compute the integer part of a number
 
--   **modulo** to calculate the remainder of an integer division
+-   **mod** to calculate the remainder of an integer division
 
--   **max**, **min** to find the larger or smaller value of two numbers
+-   **max**, **min** to find the larger or smaller value of two or more numbers
 
--   **neg** to negate the number
+-   **neg** to negate the number.
 
 -   **round** to aproximate a numeric value to a number rounded to the desired
-    quantity of fractionary digits
+    quantity of fractionary digits.
 
-2.2.2 String Components
+-   **sqrt** to calculate the square root of a number
+
+
+[String Components](2.2.2-String-Components.md)
 =======================
 
 Perform useful operations for the manipulation of strings, such as:
 
 -   **cat** to concatenate two or more strings
 
+-   **char** to generate the character from its numerical code point 
+
 -   **codepoint** to reveal the numerical code point of a Unicode character (see
-    also *utf*)
+    also *char*)
 
 -   **extract** to extract a substring out of a string
 
@@ -43,7 +48,7 @@ Perform useful operations for the manipulation of strings, such as:
 
 -   **format** to produce a more readable string out of a string
 
--   **length** to count the number of characters of a string
+-   **len** to count the number of characters of a string, its length
 
 -   **lower** to convert all upper case characters in a string to their
     corresponding lower case (see also *upper*)
@@ -61,10 +66,8 @@ Perform useful operations for the manipulation of strings, such as:
 -   **upper** to convert all lower case characters in a string to their
     corresponding upper case (see also *lower*)
 
--   **utf** to generate the Unicode character from a code point (see also
-    *codepoint*)
 
-2.2.3 Compound Components
+[Compound Components](2.2.3-Compound-Components.md)
 ======================
 
 Provide useful operations for the manipulation of compound strings, also known as **SoS** (_String of Strings_), such as:
@@ -73,7 +76,7 @@ Provide useful operations for the manipulation of compound strings, also known a
 
 
 
-2.2.4 User Interface Components
+[User Interface Components](2.2.4-User-Interface-Components.md)
 ======================
 
 Provide mechanisms to interact with the user, receiving input data and exhibit the result of data processing.
@@ -82,9 +85,11 @@ Provide mechanisms to interact with the user, receiving input data and exhibit t
 
 -   **output** to make available the result of a computation to connected inputs of other components.
 
+-   **read** to receive a string from the external filesystem.
+
 
  
-2.2.5 Control Flow
+[Control Flow](2.2.5-Control-Flow-Components.md)
 ==================
 
 Provide the mechanisms to control the execution sequence of components, such as:
@@ -94,5 +99,23 @@ Provide the mechanisms to control the execution sequence of components, such as:
 -   **loop** to repeat the computation of a subtree of components by a certain
     number of times an/or while a boolean condition holds true.
 
+-   **previous** to retrieve the value of a component computed during the previous loop cycle.
+
+
+[Boolean](2.2.6-Boolean-Components.md)
+==================
+
+Provide the boolean and comparison operations upon its numerical input values, returning 1 (**true**) or 0 (**false**):
+
+-   **AND**, **OR**, **XOR** to compute the basic boolean operations (AND, OR, eXclusive OR).
+-   **EQ** to verify if its inputs have equal values.
+-   **GE** to verify if the numerical value of an input is _greater or equal_ to the following input.
+-   **GT** to verify if the numerical value of an input is _greater than_ the following input.
+-   **NE** to verify if any of its inputs has differing values (Not Equal).
+-   **NOT** to invert the boolean value of its input.
+
+
+
+
 --------
->   *Next*: [2.2.1 Arithmetic Components](2.2.1-Arithmetic-Components.md)
+>   *Next*: [Arithmetic Components](2.2.1-Arithmetic-Components.md)
