--- a/pak/2.2.5-Control-Flow-Components.md
+++ b/pak/2.2.5-Control-Flow-Components.md
@@ -117,7 +117,7 @@ position input (c) for each search cycle. - the **loop** while input (d) is used
 to stop the loop if there are less repetitions than the desired order fed into
 its limit input (b).
 
-![](../../images/PAK-loop.jpg)
+![](img/PAK-loop.jpg)
 
 | string | letter | order | output | *Remarks*                  |
 |--------|--------|-------|--------|----------------------------|
@@ -128,4 +128,4 @@ its limit input (b).
 
  
 ------
->   *Next*: [2.3 Composition](2.3-Composition.md)
+>   *Next*: [Boolean Components](2.2.6-Boolean-Components.md)
