Langua Elements tidy up

--- a/pak/2.2-Kernel-Components.md
+++ b/pak/2.2-Kernel-Components.md
@@ -4,6 +4,8 @@ draft: true
 title: 2.2 PAK Kernel Components
 ---
 
+# 2.2 PAK Kernel Components
+
 The fundamental components used to construct other PAK parts.
 
 [Arithmetic Components](2.2.1-Arithmetic-Components.md)
@@ -12,21 +14,14 @@ The fundamental components used to construct other PAK parts.
 Provide the mathematical operations upon numerical values, such as:
 
 -   `abs` to compute the absolute (positive) value of a number
-
 -   **add**, **sub**, **mul**, **div** to compute the basic
     arithmetic operations (addition, subtraction, multiplication and division)
-
 -   **int** to compute the integer part of a number
-
 -   **mod** to calculate the remainder of an integer division
-
 -   **max**, **min** to find the larger or smaller value of two or more numbers
-
 -   **neg** to negate the number.
-
 -   **round** to aproximate a numeric value to a number rounded to the desired
     quantity of fractionary digits.
-
 -   **sqrt** to calculate the square root of a number
 
 
@@ -36,33 +31,20 @@ Provide the mathematical operations upon numerical values, such as:
 Perform useful operations for the manipulation of strings, such as:
 
 -   **cat** to concatenate two or more strings
-
 -   **char** to generate the character from its numerical code point 
-
 -   **codepoint** to reveal the numerical code point of a Unicode character (see
     also *char*)
-
 -   **extract** to extract a substring out of a string
-
 -   **find** to find the position of a string inside another string
-
 -   **format** to produce a more readable string out of a string
-
 -   **len** to count the number of characters of a string, its length
-
 -   **lower** to convert all upper case characters in a string to their
     corresponding lower case (see also *upper*)
-
 -   **piece** to extract a substring based on separator characters
-
 -   **pieces** to count the number of pieces of a string
-
 -   **replace** to replace a substring with another substring within a string
-
 -   **translate** to change characters of a string based on a translation table
-
 -   **trim** to remove leading or trailing blanks out of a string
-
 -   **upper** to convert all lower case characters in a string to their
     corresponding upper case (see also *lower*)
 
@@ -76,33 +58,28 @@ Provide useful operations for the manipulation of compound strings, also known a
 
 
 
-[User Interface Components](2.2.4-User-Interface-Components.md)
+[Interface Components](2.2.4-Interface-Components.md)
 ======================
 
-Provide mechanisms to interact with the user, receiving input data and exhibit the result of data processing.
+Provide mechanisms to interact with the user or the hosting environment, receiving input data and delivering the result of data processing.
 
 -   **input** to receive a string from a connected output component.
-
 -   **output** to make available the result of a computation to connected inputs of other components.
-
 -   **read** to receive a string from the external filesystem.
 
-
  
-[Control Flow](2.2.5-Control-Flow-Components.md)
+[Control Flow Components](2.2.5-Control-Flow-Components.md)
 ==================
 
 Provide the mechanisms to control the execution sequence of components, such as:
 
 -   **if** to select a path of execution based on a boolean value condition.
-
 -   **loop** to repeat the computation of a subtree of components by a certain
     number of times an/or while a boolean condition holds true.
-
 -   **previous** to retrieve the value of a component computed during the previous loop cycle.
 
 
-[Boolean](2.2.6-Boolean-Components.md)
+[Boolean Components](2.2.6-Boolean-Components.md)
 ==================
 
 Provide the boolean and comparison operations upon its numerical input values, returning 1 (**true**) or 0 (**false**):
