--- a/pak/2.1-Language-Elements.md
+++ b/pak/2.1-Language-Elements.md
@@ -4,14 +4,7 @@ draft: true
 title: PAK - Language Elements
 ---
 
-- Components
-- Simple Values
-- Numeric Values
-- Compound Values
-- Compound Metapak
-
-2.1 Language Elements
-=====================
+# 2.1 Language Elements
 
 The fundamental parts used to construct other PAK parts.
 
