--- a/pak/2.1-Language-Elements.md
+++ b/pak/2.1-Language-Elements.md
@@ -4,6 +4,7 @@ draft: true
 title: PAK - Language Elements
 ---
 
+[PAK Guide](0-PAK%20index.md)
 # 2.1 Language Elements
 
 The fundamental parts used to construct other PAK parts.
