--- a/pak/2.2.1-Arithmetic-Components.md
+++ b/pak/2.2.1-Arithmetic-Components.md
@@ -4,7 +4,8 @@ draft: true
 title: 2.2.1 PAK Arithmetic Components
 ---
 
-The fundamental components used to construct other PAK parts.
+
+[PAK Guide](0-PAK%20index.md) > [Kernel Components](2.2-Kernel-Components.md)
 
 2.2.1 Arithmetic Components
 ===========================
