--- a/pak/2.2.5-Control-Flow-Components.md
+++ b/pak/2.2.5-Control-Flow-Components.md
@@ -4,7 +4,7 @@ draft: true
 title: 2.2.5 PAK Control Flow Components
 ---
 
-The fundamental components used to construct PAK Parts and Kits.
+[PAK Guide](0-PAK%20index.md) > [Kernel Components](2.2-Kernel-Components.md)
 
 2.2.5 Control Flow
 ==================
