--- a/pak/2.2.6-Boolean-Components.md
+++ b/pak/2.2.6-Boolean-Components.md
@@ -4,7 +4,7 @@ draft: true
 title: 2.2.6 PAK Boolean Components
 ---
 
-The fundamental components used to construct PAK Parts and Kits.
+[PAK Guide](0-PAK%20index.md) > [Kernel Components](2.2-Kernel-Components.md)
 
 2.2.6 Boolean
 ==================
