PAK-index rename

--- a/pak/2.2-Kernel-Components.md
+++ b/pak/2.2-Kernel-Components.md
@@ -4,6 +4,7 @@ draft: true
 title: 2.2 PAK Kernel Components
 ---
 
+[PAK Guide](0-PAK-index.md)
 # 2.2 PAK Kernel Components
 
 The fundamental components used to construct other PAK parts.
