--- a/pak/2.2.1-Arithmetic-Components.md
+++ b/pak/2.2.1-Arithmetic-Components.md
@@ -5,7 +5,7 @@ title: 2.2.1 PAK Arithmetic Components
 ---
 
 
-[PAK Guide](0-PAK%20index.md) > [Kernel Components](2.2-Kernel-Components.md)
+[PAK Guide](0-PAK-index.md) > [Kernel Components](2.2-Kernel-Components.md)
 
 2.2.1 Arithmetic Components
 ===========================
