--- a/pak/2.2.2-String-Components.md
+++ b/pak/2.2.2-String-Components.md
@@ -4,7 +4,7 @@ draft: true
 title: 2.2.2 PAK String Components
 ---
 
-The fundamental components used to construct other PAK parts.
+[PAK Guide](0-PAK-index.md) > [Kernel Components](2.2-Kernel-Components.md)
 
 2.2.2 String Components
 =======================
