--- a/pak/2.2.3-Compound-Components.md
+++ b/pak/2.2.3-Compound-Components.md
@@ -4,7 +4,7 @@ draft: true
 title: 2.2.3 PAK Components
 ---
 
-The fundamental components used to construct other PAK parts.
+[PAK Guide](0-PAK-index.md) > [Kernel Components](2.2-Kernel-Components.md)
 
 2.2.3 Compound Components
 ======================
@@ -42,4 +42,4 @@ must begin.
 
  
 ------
->   *Next*: [2.2.4 User Interface Components](2.2.4-User-Interface-Components.md)
+>   *Next*: [Interface Components](2.2.4-Interface-Components.md)
