Kernel, Arithmetic, Control Flow changes

--- a/pak/2.2-Kernel-Components.md
+++ b/pak/2.2-Kernel-Components.md
@@ -9,8 +9,7 @@ title: 2.2 PAK Kernel Components
 
 The fundamental components used to construct other PAK parts.
 
-[Arithmetic Components](2.2.1-Arithmetic-Components.md)
-===========================
+## [Arithmetic Components](2.2.1-Arithmetic-Components.md)
 
 Provide the mathematical operations upon numerical values, such as:
 
@@ -26,8 +25,7 @@ Provide the mathematical operations upon numerical values, such as:
 -   **sqrt** to calculate the square root of a number
 
 
-[String Components](2.2.2-String-Components.md)
-=======================
+## [String Components](2.2.2-String-Components.md)
 
 Perform useful operations for the manipulation of strings, such as:
 
@@ -50,8 +48,7 @@ Perform useful operations for the manipulation of strings, such as:
     corresponding upper case (see also *lower*)
 
 
-[Compound Components](2.2.3-Compound-Components.md)
-======================
+## [Compound Components](2.2.3-Compound-Components.md)
 
 Provide useful operations for the manipulation of compound strings, also known as **SoS** (_String of Strings_), such as:
 
@@ -59,8 +56,7 @@ Provide useful operations for the manipulation of compound strings, also known a
 
 
 
-[Interface Components](2.2.4-Interface-Components.md)
-======================
+## [Interface Components](2.2.4-Interface-Components.md)
 
 Provide mechanisms to interact with the user or the hosting environment, receiving input data and delivering the result of data processing.
 
@@ -68,9 +64,8 @@ Provide mechanisms to interact with the user or the hosting environment, receivi
 -   **output** to make available the result of a computation to connected inputs of other components.
 -   **read** to receive a string from the external filesystem.
 
- 
-[Control Flow Components](2.2.5-Control-Flow-Components.md)
-==================
+
+## [Control Flow Components](2.2.5-Control-Flow-Components.md)
 
 Provide the mechanisms to control the execution sequence of components, such as:
 
@@ -80,8 +75,7 @@ Provide the mechanisms to control the execution sequence of components, such as:
 -   **previous** to retrieve the value of a component computed during the previous loop cycle.
 
 
-[Boolean Components](2.2.6-Boolean-Components.md)
-==================
+## [Boolean Components](2.2.6-Boolean-Components.md)
 
 Provide the boolean and comparison operations upon its numerical input values, returning 1 (**true**) or 0 (**false**):
 
