--- a/pak/2.2.5-Control-Flow-Components.md
+++ b/pak/2.2.5-Control-Flow-Components.md
@@ -65,11 +65,11 @@ of times an/or while a boolean condition holds true.
 -   Input (*limit*) is required and defines the *limit* value of the loop
     repetition counter.
 
--   Input (*start*) is optional and defines the *starting from* value of the
-    repetition counter.
+-   Input (*start*) is optional and defines the *starting* value of the
+    repetition counter, otherwise it is assumed as 1.
 
--   Input (*while*) is optional and if present, its boolean value is checked at
-    the beginning of each repetition cycle: *while true* the cycle is performed,
+-   Input (*break*) is optional and if present, its boolean value is checked at
+    the end of each repetition cycle: *while false* the cycle is performed,
     otherwise the loop is terminated.
 
 -   [FUTURE] Input (enum) is optional and enumerates the values to be assumed by
@@ -83,7 +83,7 @@ of times an/or while a boolean condition holds true.
          |         |
 ->(start)|         |
          |         |
-->(while)|         |
+->(break)|         |
          |         |
 -->(enum)|         |
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -97,7 +97,7 @@ within the looping subtree, as long as it is accessed via the interim component.
 When the loop ends, its output (x) assumes the final value of its subtree root
 component (a).
 
-Although all are optional, the inputs (*start*), (while) and (*enum*) can be
+Although all are optional, the inputs (*start*), (*break*) and (*enum*) can be
 used simultaneously. [FUTURE] In this case, (enum) takes precedence and is
 cycled before the
 
@@ -123,7 +123,7 @@ its limit input (b).
 |--------|--------|-------|--------|----------------------------|
 | banana | n      | 1     | 3      |                            |
 | banana | n      | 2     | 5      |                            |
-| banana | n      | 3     | 0      | stopped by while condition |
+| banana | n      | 3     | 0      | stopped by break condition |
 | banana | n      | 4     | 0      | same as above              |
 
  
