String, Compound tidy-up

--- a/pak/2.2.1-Arithmetic-Components.md
+++ b/pak/2.2.1-Arithmetic-Components.md
@@ -193,7 +193,7 @@ Negates the numerical value of its input.
 
 
 
-Round
+round
 -----
 
 Aproximates the numeric value of its input (a) to a number rounded to the desired quantity of fractionary digits (b).
