--- a/pak/2.2.3-Compound-Components.md
+++ b/pak/2.2.3-Compound-Components.md
@@ -11,34 +11,31 @@ title: 2.2.3 PAK Components
 
 Provide useful operations for the manipulation of compound strings, also known as **SoS** (_String of Strings_), such as:
 
-- **pack** its several inputs into a SoS.
+- **pack** its several inputs into a **SoS**.
 
 
 
-TODO
+pack
 ----
 
-Finds the starting position of input (b) inside input (a).
+Packs its several inputs into a **SoS** String-of-Strings structure.
 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
         _________
---->(a)|         |[index]-->
-       |  FIND   |
+--->(a)|         |[SoS]-->
+       |  pack   |
 --->(b)|         |
        |         |
 --->(c)|         |
+       |         |
+.......|         |
+       |         |
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-If (a) does not contains (b), returns zero.
 
-If connected, input (c) defines the initial position in (a) where the search
-must begin.
 
-### *Examples*
 
-| a   | b     | index |
-|-----|-------|-------|
-| "1" | "02H" | "3"   |
+
 
  
 ------
