update navigation links

--- a/pak/2.1.1-Simple-Values.md
+++ b/pak/2.1.1-Simple-Values.md
@@ -84,4 +84,4 @@ The boolean value is deduced from the numeric interpretation of a string:
 
 
 
-> *Next*: [2.1.2 Compound Values](2.1.2-Compound-Values.md)
+> *Next*: [Compound Values](2.1.2-Compound-Values.md)
