--- a/pak/2.1.2-Compound-Values.md
+++ b/pak/2.1.2-Compound-Values.md
@@ -133,4 +133,4 @@ countries: [
 
 
 
-> *Next*: [2.2 Kernel Components](2.2-Kernel-Components.md)
+> *Next*: [Kernel Components](2.2-Kernel-Components.md)
