--- a/pak/2.2.1-Arithmetic-Components.md
+++ b/pak/2.2.1-Arithmetic-Components.md
@@ -220,4 +220,4 @@ Calculates the square root of the numeric value of its input (a).
 
 
 ------
->   *Next*: [2.2.2 String Components](2.2.2-String-Components.md)
+>   *Next*: [String Components](2.2.2-String-Components.md)
