--- a/pak/2.2.2-String-Components.md
+++ b/pak/2.2.2-String-Components.md
@@ -147,4 +147,4 @@ the search must start.
 
  
 ------
->   *Next*: [2.2.3 Compound Strings](2.2.3-Compound-Components.md)
+>   *Next*: [Compound Strings](2.2.3-Compound-Components.md)
