--- a/pak/2.2.4-Interface-Components.md
+++ b/pak/2.2.4-Interface-Components.md
@@ -44,4 +44,4 @@ Output [data] is ready only after the ENTER, ESC or LOST_FOCUS events are genera
 
  
 ------
->   *Next*: [2.2.5 Control Flow](2.2.5-Control-Flow-Components.md)
+>   *Next*: [Control Flow](2.2.5-Control-Flow-Components.md)
